# ParaKV

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  setup.py  utils.py  vcpkg.json
.agents/skills/add-unit-test/: SKILL.md
.agents/skills/add-unit-test/references/: parakv-test-patterns.md
docker/: Dockerfile
docs/cn/: architecture.md  index.md  segment.md  version-management.md
docs/zh/: developer-guide.md
docs/zh/design/: architecture.md  index.md  introduction.md  io_uring_async.md  segment.md
parakv/: CMakeLists.txt  parakv.cc
parakv/client/: CMakeLists.txt  parakv_client.cc  parakv_client.h
parakv/common/: CMakeLists.txt  etcd_client.cc  etcd_client.h  global_gflags.cc  global_gflags.h  status.h
parakv/core/: CMakeLists.txt
parakv/core/cache/: CMakeLists.txt  allow.h  lfuda_cache.h  lock.h  lru.h
parakv/core/index/: CMakeLists.txt  index.cc  index.h  key.h  offset.h  wal.cc  wal.h
parakv/core/kvcache_storage/: CMakeLists.txt  backend_namespace_manager.cc  backend_namespace_manager.h  backend_registry.cc  backend_registry.h  index_kvcache_storage_backend.cc  index_kvcache_storage_backend.h  kvcache_storage.cc  kvcache_storage.h  kvcache_storage_backend.h  mocked_inmemory_kvcache_storage.cc  mocked_inmemory_kvcache_storage.h
parakv/core/segment/: CMakeLists.txt  segment_base.cc  segment_base.h  segment_block_dev.cc  segment_block_dev.h  segment_file.cc  segment_file.h  segment_file_test.cc  segment_manager.cc  segment_manager.h
parakv/proto/: CMakeLists.txt  kvcache_storage_service.proto
parakv/server/: CMakeLists.txt  parakv_server.cc  parakv_server.h
parakv/service/: CMakeLists.txt  kvcache_storage_service_impl.cc  kvcache_storage_service_impl.h
test/: startup-server.sh
test/pyclient/: client.py  kvcache_storage_service_pb2_grpc.py
test/pytest/: README.md  conftest.py  test_kvcache_storage_service.py
test/pytest/conf/: parakv.gflags
tests/debug/: data_validation.py  run.sh
tests/pyclient/: kvcache_storage_service_pb2.py  kvcache_storage_service_pb2_grpc.py
tests/pytest/: README.md  kvcache_storage_service_pb2.py  protoc.sh  requirements.txt  test_kvcache_storage_service.py
